@@ -1,9 +1,10 @@
 Version 0.43.0 (In Progress)
 
+  * addition of "losf sync" command which synchronizes host provisioning config with Cobbler
   * addition of "losf reinsert [host]" (a convenience command for del/add combinations)
   * example top-level LosF config file provided in config/config.machines.example
   * example cluster-specific configuration file provided in config/config.Bar
-  * transitioned SCM from svn to git 
+  * transitioned SCM from subversion to git 
 
 Version 0.42.0  (12 December 2013)
 
